; ModuleID = '/home/carl/AnghaBench/jq/src/extr_inject_errors.c_fgets.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_inject_errors.c_fgets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fail_read = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fgets(i8* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = call i32 @GET_REAL(i8* (i8*, i32, i32*)* @fgets)
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = call i8* @real_fgets(i8* %10, i32 %11, i32* %12)
  store i8* %13, i8** %8, align 8
  %14 = load i32*, i32** @fail_read, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = icmp eq i32* %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %20

18:                                               ; preds = %3
  %19 = load i8*, i8** %8, align 8
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %18, %17
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i32 @GET_REAL(i8* (i8*, i32, i32*)*) #1

declare dso_local i8* @real_fgets(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
